Caught a case where a text mutation, which bypasses `_cssText`, wasn't getting rebuilt with `adaptCssForReplay`

--- a/packages/rrweb/test/html/style.html
+++ b/packages/rrweb/test/html/style.html
@@ -22,6 +22,9 @@
       let empty = document.getElementById('empty');
       empty.sheet.insertRule('a:hover { outline: 1px solid blue; }');
     </script>
+    <style id="hover-mutation">
+      /* replaceme */
+    </style>
   </head>
   <body>
   </body>
