fix: remove the permission not needed and update the player style link

--- a/packages/web-extension/src/pages/index.html
+++ b/packages/web-extension/src/pages/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<meta charset="utf-8" />
-<title>rrweb</title>
 <html>
-  <body>
-    <div id="root"></div>
-  </body>
-  <script type="module" src="./index.tsx"></script>
+
+<head>
+  <meta charset="utf-8" />
+  <title>rrweb</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+<script type="module" src="./index.tsx"></script>
+
 </html>
