--- a/packages/rrweb/test/html/form.html
+++ b/packages/rrweb/test/html/form.html
@@ -34,6 +34,7 @@
         <input type="password" />
       </label>
       <textarea>pre value</textarea>
+      <input type="hidden" value="123456">
     </form>
   </body>
 </html>
