--- a/packages/rrweb-snapshot/test/__snapshots__/cdata.svg.snap.html
+++ b/packages/rrweb-snapshot/test/__snapshots__/cdata.svg.snap.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
+<style>.Icon &gt; span { color: blue; }</style>
 </head>
 <body>
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
