--- a/packages/rrweb-snapshot/test/__snapshots__/cdata.svg.snap.html
+++ b/packages/rrweb-snapshot/test/__snapshots__/cdata.svg.snap.html
@@ -6,6 +6,7 @@
 <body>
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
 <style>.Icon &gt; span { color: red; }</style>
+<div>&lt;/svg&gt;&amp; this is not markup&lt;svg/&gt;</div>
 </svg>
 </body>
 </html>
