--- a/packages/ws-client/test/autostart.html
+++ b/packages/ws-client/test/autostart.html
@@ -5,16 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WS Client</title>
-    <script src="../dist/ws-client.umd.cjs">
-      // provide some config
+    <script src="../dist/ws-client.umd.cjs" async autostart>
       {
-          "serverUrl": "https://api.rrwebcloud.com",
-          "autostart": true,
-          "blockSelector": '.my-block',
-          "captureAssets": {
-              "video": false,
-              "audio": false,
-          }
+          serverUrl: 'https://api.rrwebcloud.com'
       }
     </script>
   </head>
