After discussion with Justin; a 'recording' is associated with the browser sessionStorage, which means it is per-tab (but can still comprise multiple page views).  We can later compose these according to the client's idea of a 'session' or a 'visitor' during replay

--- a/packages/ws-client/test/record.html
+++ b/packages/ws-client/test/record.html
@@ -8,7 +8,7 @@
     <script src="../dist/ws-client.umd.cjs">
       // provide some config
       {
-          "serverUrl": "https://api.rrwebcloud.com",
+          "serverUrl": "http://localhost:8787/sessions/{recordingId}/ingest/ws",
           "autostart": true,
           "blockSelector": '.my-block',
           "captureAssets": {
