The name of the client js file has been updated

--- a/packages/ws-client/test/record.html
+++ b/packages/ws-client/test/record.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WS Client</title>
-    <script src="../dist/ws-client.umd.cjs">
+    <script src="../dist/js-client.umd.cjs">
       // provide some config
       {
           "serverUrl": "http://localhost:8787/recordings/{recordingId}/ingest/ws",
