--- a/packages/ws-client/test/autostart.html
+++ b/packages/ws-client/test/autostart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WS Client</title>
-    <script src="../dist/ws-client.umd.cjs" async autostart>
+    <script src="../dist/js-client.umd.cjs" async autostart>
       {
           serverUrl: 'https://api.rrwebcloud.com'
       }
