Get first test for ws-client up and running

--- a/packages/ws-client/test/record.html
+++ b/packages/ws-client/test/record.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WS Client</title>
+    <script>
+      function mitFn(e) { console.log('ok', e) };
+    </script>
     <script src="../dist/js-client.umd.cjs">
       // provide some config
       {
+        "emit": "mitFn",
           "serverUrl": "http://localhost:8787/recordings/{recordingId}/ingest/ws",
           "autostart": true,
           "blockSelector": '.my-block',
